--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li><a href="Contacts">Contacts</a></li>
+        <ul class="page-nav">         
+          <li><a href="#Studio" class="link">Studio</a></li>
+          <li><a href="#Portfolio"class="link">Portfolio</a></li>
+          <li><a href="#Contacts"class="link">Contacts</a></li>
         </ul>
       </nav>
-
       <address>
-        <ul>
+        <ul class="social-links">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
