--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
   </head>
 
   <body>
     <!-- content -->
     <header>
-      <nav>
+      <nav class="link">
         <a href="./index.html">WebStudio</a>
-        <ul class="page-nav">         
+        <ul class="page-nav">
           <li><a href="#Studio" class="link">Studio</a></li>
-          <li><a href="#Portfolio"class="link">Portfolio</a></li>
-          <li><a href="#Contacts"class="link">Contacts</a></li>
+          <li><a href="#Portfolio" class="link">Portfolio</a></li>
+          <li><a href="#Contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul class="social-links">
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="yellow-bgd">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
