--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-   
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="preconnect" href="<https://fonts.gstatic.com>" />
   </head>
 
   <body>
@@ -21,7 +22,9 @@
         <a href="./index.html">WebStudio</a>
         <ul class="page-nav">
           <li><a href="#Studio" class="link">Studio</a></li>
-          <li><a href="#Portfolio" class="link">Portfolio</a></li>
+          <li>
+            <a href="#Portfolio" class="header-navigation-link">Portfolio</a>
+          </li>
           <li><a href="#Contacts" class="link">Contacts</a></li>
         </ul>
       </nav>
@@ -33,7 +36,7 @@
             >
           </li>
           <li class="yellow-bgd">
-            <a href="tel:+2110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+1111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
