--- a/portfolio.html
+++ b/portfolio.html
@@ -56,27 +56,27 @@
         <ul>
           <li>
             <button class="filter-link" type="button">
-              <a class="filter-text">All</a>
+              <span class="accent">All</span>
             </button>
           </li>
           <li>
             <button class="filter-link" type="button">
-              <p class="filter-text">Web Site</p>
+              <span class="accent">Web Site</span>
             </button>
           </li>
           <li>
             <button class="filter-link" type="button">
-              <p class="filter-text">App</p>
+              <span class="accent">App</span>
             </button>
           </li>
           <li>
             <button class="filter-link" type="button">
-              <p class="filter-text">Design</p>
+              <span class="accent">Design</span>
             </button>
           </li>
           <li>
             <button class="filter-link" type="button">
-              <p class="filter-text">Marketing</p>
+              <span class="accent">Marketing</span>
             </button>
           </li>
         </ul>
