--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,10 @@
     <!-- content -->
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo link" href="./index.html"
-          >Web <span class="header-logoweb link link">Studio</span></a
+        <a class="header-logoweb" href="./index.html"
+          >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu">
-          <li class="header-menu item">
-            <a class="header-menu-link link" href="#Studio">Studio</a>
-          </li>
           <li class="header-menu item">
             <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
           </li>
