--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <a class="header-logoweb" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
-        <ul class="header-menu">
-          <li class="header-menu item">
+        <ul class="header-menu link">
+          <li class="header-menu-item link">
             <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
           </li>
-          <li class="header-menu item">
+          <li class="header-menu item link">
             <a class="header-menu-link link" href="#Contacts">Contacts</a>
           </li>
         </ul>
@@ -56,28 +56,28 @@
       <section>
         <h2 hidden>for readers</h2>
         <ul class="hid-link">
-          <li class="hid-link-list">
+          <li class="hid-link-list link">
             <h3 class="hid-link-title">Strategy</h3>
             <p class="hid-link-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="hid-link-list">
+          <li class="hid-link-list link">
             <h3 class="link-title">Punctuality</h3>
             <p class="link-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="hid-link-list">
+          <li class="hid-link-list link">
             <h3 class="link-title">Diligence</h3>
             <p class="link-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="hid-link-list">
+          <li class="hid-link-list link">
             <h3 class="link-title">Technologies</h3>
             <p class="link-text">
               Design practice focused on digital experiences. We bring forth a
@@ -89,14 +89,14 @@
       <!--What are we doing-->
       <section class="sec-soul">
         <h2 class="soul-title">What are we doing</h2>
-        <ul>
-          <li>
+        <ul class="soul-title-list">
+          <li class="soul-title-list link">
             <img src="./images/img1.jpg" alt="img1" width="360" />
           </li>
-          <li>
+          <li class="soul-title-list link">
             <img src="./images/img2.jpg" alt="img 2" width="360" />
           </li>
-          <li>
+          <li class="soul-title-list link">
             <img src="./images/img3.jpg" alt="img 3" width="360" />
           </li>
         </ul>
@@ -105,7 +105,7 @@
       <section>
         <h2 class="soul-title">Our Team</h2>
         <ul class="title-link">
-          <li class="title-list">
+          <li class="title-list link">
             <img
               class="title-team"
               src="./images/team1.jpg"
@@ -115,7 +115,7 @@
             <h3 class="link-title">Mark Guerrero</h3>
             <p class="link-text">Product Designer</p>
           </li>
-          <li class="title-list">
+          <li class="title-list link">
             <img
               class="title-team"
               src="./images/team2.jpg"
@@ -125,12 +125,12 @@
             <h3 class="link-title">Tom Ford</h3>
             <p class="link-text">Frontend Developer</p>
           </li>
-          <li class="title-list">
+          <li class="title-list link">
             <img src="./images/team3.jpg" alt="Marketing" width="264" />
             <h3 class="link-title">Camila Garcia</h3>
             <p class="link-text">Marketing</p>
           </li>
-          <li class="title-list">
+          <li class="title-list link">
             <img
               class="title-team"
               src="./images/team4.jpg"
