--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!-- content -->
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logoweb" href="./index.html"
+        <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu">
