--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
   <body>
     <!-- content -->
-    <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logoweb" href="./index.html"
+    <header class="header link">
+      <nav class="header-navigation link">
+        <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu link">
