--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- content -->
     <header class="header link">
       <nav class="header-navigation link">
+        <ul class="header-menu link"></ul>
+        <li class="header-menu-item link"></li>
         <a class="header-logoweb link" href="./index.html"
-          >Web <span class="header-logoweb-link link">Studio</span></a
-        >
-        <ul class="header-menu link">
+          >Web <span class="header-logoweb-link link">Studio</span></a> 
           <li class="header-menu-item link">
             <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
           </li>
