--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a> 
           <li class="header-menu-item link">
-            <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
+            <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
-            <a class="header-menu-link link" href="#Contacts">Contacts</a>
+            <a class="header-menu-link link" href="./contacts.html">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul class="social link">
-          <li class="social-link link">
-            <a class="social-iten link" href="mailto:info@devstudio.com"
+        <ul class="social">
+          <li class="social-link">
+            <a class="social-iten list " href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link link">
-            <a class="social-iten link" href="tel:+1111111"
+          <li class="social-link">
+            <a class="social-iten list" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
