--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <address>
         <ul class="social">
           <li class="social-link">
-            <a class="social-iten list " href="mailto:info@devstudio.com"
+            <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="social-link">
-            <a class="social-iten list" href="tel:+1111111"
+            <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
