--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- content -->
     <header class="header link">
       <nav class="header-navigation link">
-        <ul class="header-menu link"></ul>
+        <ul class="header-menu link">
         <li class="header-menu-item link"></li>
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a> 
@@ -64,22 +64,22 @@
             </p>
           </li>
           <li class="hid-link-list link">
-            <h3 class="link-title">Punctuality</h3>
-            <p class="link-text">
+            <h3 class="hid-link-title">Punctuality</h3>
+            <p class="hid-link-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="hid-link-list link">
-            <h3 class="link-title">Diligence</h3>
-            <p class="link-text">
+            <h3 class="hid-link-title">Diligence</h3>
+            <p class="hid-link-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="hid-link-list link">
-            <h3 class="link-title">Technologies</h3>
-            <p class="link-text">
+            <h3 class="hid-link-title">Technologies</h3>
+            <p class="hid-link-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
