--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,16 @@
 
   <body>
     <!-- content -->
-    <header class="header link">
-      <nav class="header-navigation link">
-        <ul class="header-menu link"></ul>
-        <li class="header-menu-item link"></li>
+    <header class="header">
+      <nav class="header-navigation">
         <a class="header-logoweb link" href="./index.html"
-          >Web <span class="header-logoweb-link link">Studio</span></a> 
-          <li class="header-menu-item link">
+          >Web <span class="header-logoweb-link link">Studio</span></a
+        >
+        <ul class="header-menu">
+          <li class="header-menu item">
             <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
           </li>
-          <li class="header-menu item link">
+          <li class="header-menu item">
             <a class="header-menu-link link" href="#Contacts">Contacts</a>
           </li>
         </ul>
