--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 
     <main>
       <section class="filter">
-        <h1 class="filter-hidden"></h1>
+        <h1 class="filter-hidden">filter</h1>
         <ul>
           <li>
             <button class="filter-link" type="button">
