--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
     <!--WEBSTUDIO-->
     <footer class="footer-navigation">
       <a class="footer-list" href="./index.html"
-        >Web <span class="navigation-link link">Studio</span></a
+        >Web <span class="navigation-link ">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
