--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </main>
     <!--WEBSTUDIO-->
     <footer class="footer-navigation">
-      <a class="footer-list" href="./index.html"
+      <a class="footer-list link" href="./index.html"
         >Web <span class="navigation-link link">Studio</span></a
       >
       <p class="footer-text">
