--- a/portfolio.html
+++ b/portfolio.html
@@ -176,7 +176,7 @@
     </main>
     <!--WEBSTUDIO-->
     <footer class="footer-navigation">
-      <a class="footer-list" href="./index.html"
+      <a class="footer-list link" href="./index.html"
         >Web <span class="navigation-link ">Studio</span></a
       >
       <p class="footer-text">
