--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </section>
       <!--What are we doing-->
       <section class="sec-soul">
-        <h2 class="soul-title">What are we doing</h2>
+        <h2 class="soul-title link">What are we doing</h2>
         <ul class="soul-title-list">
           <li class="soul-title-list link">
             <img src="./images/img1.jpg" alt="img1" width="360" />
