--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <!-- content -->
     <header class="header">
-      <nav class="header-navigation">
+      <nav class="header-navigation list">
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
