--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         >
         <ul class="header-menu link">
           <li class="header-menu-item link">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          <li class="header-menu-item link">
             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
