--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
+  <body class="body">
     <!-- content -->
     <header class="header">
       <nav class="header-navigation list">
@@ -23,12 +23,14 @@
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu">
-          <li class="header-menu item">
-            <a class="header-menu-link link" href="#Portfolio">Portfolio</a>
-          </li>
-          <li class="header-menu item">
-            <a class="header-menu-link link" href="#Contacts">Contacts</a>
-          </li>
+          <li class="header-menu-item link">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+            <li class="header-menu-item link">
+              <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-menu item link">
+              <a class="header-menu-link link" href="./contacts.html">Contacts</a>
+            </li>
         </ul>
       </nav>
       <address>
@@ -80,8 +82,8 @@
       </section>
       <!--foto-->
       <section class="foto">
-        <ul class="foto-title">
-          <li class="foto-link">
+        <ul class="foto-title list">
+          <li class="foto-link link">
             <img
               class="foto-team"
               src="./images/img33.jpg"
