--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,8 @@
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu">
-          <li class="header-menu-item link">
-            <a class="header-menu-link link" href="./index.html">Studio</a>
             <li class="header-menu-item link">
-              <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-menu-link link" href="./index.html">Portfolio</a>
             </li>
             <li class="header-menu item link">
               <a class="header-menu-link link" href="./contacts.html">Contacts</a>
