--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         >
         <ul class="header-menu link">
              <li class="header-menu-item link">
-            <a class="header-menu-link link" href="./index.html">Portfolio</a>
+            <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
             <a class="header-menu-link link" href="./contacts.html">Contacts</a>
