--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
         <ul class="header-menu link">
-             <li class="header-menu-item link">
+          <li class="header-menu-item link">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          <li class="header-menu-item link">
             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
