--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,15 @@
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
-        <ul class="header-menu">
-             <li class="header-menu-item link">
-              <a class="header-menu-link link" href="./index.html">Portfolio</a>
-            </li>
-            <li class="header-menu item link">
-              <a class="header-menu-link link" href="./contacts.html">Contacts</a>
-            </li>
+        <ul class="header-menu link">
+          <li class="header-menu-item link">
+            <a class="header-menu-link link" href="./index.html">Studio</a>
+          <li class="header-menu-item link">
+            <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-menu item link">
+            <a class="header-menu-link link" href="./contacts.html">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
