--- a/portfolio.html
+++ b/portfolio.html
@@ -83,13 +83,14 @@
       <!--foto-->
       <section class="foto">
         <ul class="foto-title list">
-          <li class="foto-link link">
+          <li class="foto-link-old">
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img33.jpg"
               alt="bank app"
               width="360"
-            />
+            /></a>
             <h2 class="foto-link-title">Banking App Interface Concept</h2>
             <p class="foto-link-text">App</p>
           </li>
