--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
-        <ul class="header-menu link">
+        <ul class="header-menu list">
           <li class="header-menu-item link">
             <a class="header-menu-link link" href="./index.html">Studio</a>
           <li class="header-menu-item link">
