--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <a class="header-logoweb link" href="./index.html"
           >Web <span class="header-logoweb-link link">Studio</span></a
         >
-        <ul class="header-menu link">
+        <ul class="header-menu list">
           <li class="header-menu-item link">
             <a class="header-menu-link link" href="./index.html">Studio</a>
           <li class="header-menu-item link">
@@ -90,11 +90,13 @@
               src="./images/img33.jpg"
               alt="bank app"
               width="360"
-            /></a>
+            />
             <h2 class="foto-link-title">Banking App Interface Concept</h2>
             <p class="foto-link-text">App</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img44.jpg"
@@ -103,8 +105,10 @@
             />
             <h2 class="foto-link-title">Cashless Payment</h2>
             <p class="foto-link-text">Marketing</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img5.jpg"
@@ -113,8 +117,10 @@
             />
             <h2 class="foto-link-title">Meditation App</h2>
             <p class="foto-link-text">App</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img6.jpg"
@@ -123,8 +129,10 @@
             />
             <h2 class="foto-link-title">Taxi Service</h2>
             <p class="foto-link-text">Marketing</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img7.jpg"
@@ -133,8 +141,10 @@
             />
             <h2 class="foto-link-title">Screen Illustrations</h2>
             <p class="foto-link-text">Design</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img8.jpg"
@@ -143,8 +153,10 @@
             />
             <h2 class="foto-link-title">Online Courses</h2>
             <p class="foto-link-text">Marketing</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img9.jpg"
@@ -153,8 +165,10 @@
             />
             <h2 class="foto-link-title">Instagram Stories Concept</h2>
             <p class="foto-link-text">Design</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img10.jpg"
@@ -163,8 +177,10 @@
             />
             <h2 class="foto-link-title">Organic Food</h2>
             <p class="foto-link-text">Web Site</p>
+          </a>
           </li>
           <li>
+            <a class="foto-link link"  href="">
             <img
               class="foto-team"
               src="./images/img11.jpg"
@@ -173,6 +189,7 @@
             />
             <h2 class="foto-link-title">Fresh Coffee</h2>
             <p class="foto-link-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
