--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Strategy -->
       <section>
         <h2 hidden>for readers</h2>
-        <ul class="hid-link">
+        <ul class="hid-link list">
           <li class="hid-link-list link">
             <h3 class="hid-link-title">Strategy</h3>
             <p class="hid-link-text">
@@ -91,7 +91,7 @@
       <!--What are we doing-->
       <section class="sec-soul">
         <h2 class="soul-title link">What are we doing</h2>
-        <ul class="soul-title-list">
+        <ul class="soul-title-list list">
           <li class="soul-title-list link">
             <img src="./images/img1.jpg" alt="img1" width="360" />
           </li>
@@ -106,7 +106,7 @@
       <!--Our Team-->
       <section>
         <h2 class="soul-title">Our Team</h2>
-        <ul class="title-link">
+        <ul class="title-link list">
           <li class="title-list link">
             <img
               class="title-team"
