--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <button class="solution-button" type="button">Order Service</button>
       </section>
       <!-- Strategy -->
-      <section>
-        <h2 hidden>for readers</h2>
+      <section class="readers">
+        <h2 class=" hid">for readers</h2>
         <ul class="hid-link list">
           <li class="hid-link-list link">
             <h3 class="hid-link-title">Strategy</h3>
