--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </header>
 
     <main>
-      <section class="filter">
+      <section class="filter list">
         <h1 class="filter-hidden">filter</h1>
         <ul>
           <li>
