--- a/portfolio.html
+++ b/portfolio.html
@@ -52,28 +52,28 @@
     <main>
       <section class="filter list">
         <h1 class="filter-hidden">filter</h1>
-        <ul>
-          <li>
+        <ul class="filter-clic list">
+          <li class="filter-clok">
             <button class="filter-link" type="button">
               <span class="accent">All</span>
             </button>
           </li>
-          <li>
+          <li class="filter-clok">
             <button class="filter-link" type="button">
               <span class="accent">Web Site</span>
             </button>
           </li>
-          <li>
+          <li class="filter-clok">
             <button class="filter-link" type="button">
               <span class="accent">App</span>
             </button>
           </li>
-          <li>
+          <li class="filter-clok">
             <button class="filter-link" type="button">
               <span class="accent">Design</span>
             </button>
           </li>
-          <li>
+          <li class="filter-clok">
             <button class="filter-link" type="button">
               <span class="accent">Marketing</span>
             </button>
