--- a/portfolio.html
+++ b/portfolio.html
@@ -29,18 +29,18 @@
             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
-            <a class="header-menu-link link" href="./contacts.html">Contacts</a>
+            <a class="header-menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul class="social link">
-          <li class="social-link link">
+          <li class="social-link list">
             <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link link">
+          <li class="social-link list">
             <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
