--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-menu item link">
-            <a class="header-menu-link link" href="./contacts.html">Contacts</a>
+            <a class="header-menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul class="social">
-          <li class="social-link">
-            <a class="social-iten link" href="mailto:info@devstudio.com"
+          <li class="social-link list">
+            <a class="social-iten list" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link">
-            <a class="social-iten link" href="tel:+1111111"
+          <li class="social-link list">
+            <a class="social-iten list" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
