--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,12 @@
       <address>
         <ul class="social link">
           <li class="social-link list">
-            <a class="social-iten link" href="mailto:info@devstudio.com"
+            <a class="social-iten list" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="social-link list">
-            <a class="social-iten link" href="tel:+1111111"
+            <a class="social-iten list" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
