--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,13 @@
         </ul>
       </nav>
       <address>
-        <ul class="social link">
-          <li class="social-link link">
+        <ul class="social">
+          <li class="social-link list link">
             <a class="social-iten list" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link link">
+          <li class="social-link list link">
             <a class="social-iten list" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
