--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </nav>
       <address>
         <ul class="social">
-          <li class="social-link list link">
-            <a class="social-iten list" href="mailto:info@devstudio.com"
+          <li class="social-link">
+            <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link list link">
-            <a class="social-iten list" href="tel:+1111111"
+          <li class="social-link">
+            <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
