--- a/portfolio.html
+++ b/portfolio.html
@@ -34,14 +34,14 @@
         </ul>
       </nav>
       <address>
-        <ul class="social list">
+        <ul class="social">
           <li class="social-link">
-            <a class="social-iten list link" href="mailto:info@devstudio.com"
+            <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="social-link">
-            <a class="social-iten list link" href="tel:+1111111"
+            <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
           </li>
