--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
       </nav>
       <address>
         <ul class="social">
-          <li class="social-link">
+          <li class="social-link list">
             <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link">
+          <li class="social-link list">
             <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
