--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,13 @@
         </ul>
       </nav>
       <address>
-        <ul class="social">
-          <li class="social-link list">
+        <ul class="social list">
+          <li class="social-link">
             <a class="social-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link list">
+          <li class="social-link">
             <a class="social-iten link" href="tel:+1111111"
               >+11 (000) 111-11-11</a
             >
