--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="social list">
-          <li class="social-link">
-            <a class="social-iten link" href="mailto:info@devstudio.com"
+      <address class="address">
+        <ul class="address list">
+          <li class="address-link">
+            <a class="address-iten link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="social-link">
-            <a class="social-iten link" href="tel:+110001111111"
+          <li class="address-link">
+            <a class="address-iten link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
