--- a/portfolio.html
+++ b/portfolio.html
@@ -52,32 +52,12 @@
       <section class="filter list">
         <h1 class="filter-hidden">filter</h1>
         <ul class="filter-clic list">
-          <li class="filter-clok">
-            <button class="filter-link" type="button">
-              <span class="accent">All</span>
-            </button>
-          </li>
-          <li class="filter-clok">
-            <button class="filter-link" type="button">
-              <span class="accent">Web Site</span>
-            </button>
-          </li>
-          <li class="filter-clok">
-            <button class="filter-link" type="button">
-              <span class="accent">App</span>
-            </button>
-          </li>
-          <li class="filter-clok">
-            <button class="filter-link" type="button">
-              <span class="accent">Design</span>
-            </button>
-          </li>
-          <li class="filter-clok">
-            <button class="filter-link" type="button">
-              <span class="accent">Marketing</span>
-            </button>
-          </li>
-        </ul>
+          <li class="filter-clok"><button type="button" class="filter-link">All</button></li>
+          <li class="filter-clok"><button type="button" class="filter-link">Web Site</button></li>
+          <li class="filter-clok"><button type="button" class="filter-link">App</button></li>
+          <li class="filter-clok"><button type="button" class="filter-link">Design</button></li>
+          <li class="filter-clok"><button type="button" class="filter-link">Marketing</button></li>
+       </ul>
         <ul class="foto-title list">
           <li class="foto-link-old">
             <a class="foto-link link"  href="">
