--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </ul>
       </section>
       <!--What are we doing-->
-      <section class="sec-soul">
+      <section class="sec-soul link">
         <h2 class="soul-title link">What are we doing</h2>
         <ul class="soul-title-list list">
           <li class="soul-title-list link">
