--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,11 @@
     <title>Web studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;0,800;1,700&family=Roboto:ital,wght@0,700;1,700&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body class="body">
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address class="address">
+      <address class="address">s
         <ul class="address list">
           <li class="address-link">
             <a class="address-iten link" href="mailto:info@devstudio.com"
