--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address class="address">
+      <address class="addresssted">
         <ul class="address list">
           <li class="address-link">
             <a class="address-iten link" href="mailto:info@devstudio.com"
