--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!--What are we doing-->
       <section class="sec-soul link">
         <h2 class="soul-title link">What are we doing</h2>
-        <ul class="soul-title-list list">
+        <ul class="sec-soul-title list">
           <li class="soul-title-list link">
             <img src="./images/img1.jpg" alt="img1" width="360" />
           </li>
