--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address class="addresssted">
+      <address class="addressted">
         <ul class="address list">
           <li class="address-link">
             <a class="address-iten link" href="mailto:info@devstudio.com"
@@ -104,7 +104,7 @@
       </section>
       <!--Our Team-->
       <section>
-        <h2 class="soul-title">Our Team</h2>
+        <h2 class="soul-title link">Our Team</h2>
         <ul class="title-link list">
           <li class="title-list link">
             <img
