--- a/index.html
+++ b/index.html
@@ -92,14 +92,15 @@
         <h2 class="soul-title link">What are we doing</h2>
         <ul class="sec-soul-title list">
           <li class="soul-title-list link">
+            <a class="soul-sec-title" href="">
             <img src="./images/img1.jpg" alt="img1" width="360" />
-          </li>
-          <li class="soul-title-list link">
+          </a></li>
+          <li class="soul-title-list link"> <a class="soul-sec-title" href="">
             <img src="./images/img2.jpg" alt="img2" width="360" />
-          </li>
-          <li class="soul-title-list link">
+          </a></li>
+          <li class="soul-title-list link"> <a class="soul-sec-title" href="">
             <img src="./images/img3.jpg" alt="img3" width="360" />
-          </li>
+          </a></li>
         </ul>
       </section>
       <!--Our Team-->
