--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
         </ul>
       </section>
       <!--What are we doing-->
-      <section class="sec-soul">
-        <h2 class="soul-title">What are we doing</h2>
+      <section class="sec-soul link">
+        <h2 class="soul-title link">What are we doing</h2>
         <ul class="sec-soul-title list">
-          <li class="soul-title-list">
+          <li class="sec-title-list link">
             <img src="./images/img1.jpg" alt="img1" width="360" />
           </li>
-          <li class="soul-title-list">
+          <li class="sec-title-list link">
             <img src="./images/img2.jpg" alt="img2" width="360" />
           </li>
-          <li class="soul-title-list ">
+          <li class="sec-title-list link">
             <img src="./images/img3.jpg" alt="img3" width="360" />
           </li>
         </ul>
       </section>
       <!--Our Team-->
-      <section>
-        <h2 class="soul-title">Our Team</h2>
+      <section class="doing-soul link">
+        <h2 class="soul-title link">Our Team</h2>
         <ul class="title-link list">
-          <li class="title-list">
+          <li class="title-list link">
             <img
               class="title-team"
               src="./images/team1.jpg"
@@ -126,12 +126,12 @@
             <h3 class="link-title">Tom Ford</h3>
             <p class="link-text">Frontend Developer</p>
           </li>
-          <li class="title-list">
+          <li class="title-list link">
             <img src="./images/team3.jpg" alt="Marketing" width="264" />
             <h3 class="link-title">Camila Garcia</h3>
             <p class="link-text">Marketing</p>
           </li>
-          <li class="title-list">
+          <li class="title-list link">
             <img
               class="title-team"
               src="./images/team4.jpg"
